# cpp_practice

./: .gitignore  README.md
1.Calculator/: Calculator.cpp
1st/implement/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect.cpp  opencv_test.cpp
1st/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
1st/tflite_test/: CMakeLists.txt  tflite.cpp
2.BankAccount/: BankAccount.hpp  CMakeLists.txt
2nd/: CMakeLists.txt  client.cpp  client.h  main.cpp  server.cpp
3.Animal/: Animal.hpp  Cat.hpp  Cow.hpp  Dog.cpp  Dog.hpp  work.md
3rd/: read_i2c.cpp
4.Student/: CMakeLists.txt  FileManager.cpp  Student.cpp  Student.hpp  student.txt
Animal/: CMakeLists.txt  Cat.cpp  Cow.cpp
BankAccount/: BankAccount.cpp  BankAccount.hpp
Calculator/: CMakeLists.txt  Calculator.hpp
docs/.obsidian/: workspace.json
docs/1st/: CMakeLists.txt 작성 방법.md  OpenCV에서 프레임 정보 받아오기.md  Windows 환경에서 opencv 설치하기.md  tensorflow lite API for C++ 설치하기.md
docs/2nd/: TCP_IP 통신을 위한 소켓 만들기.md  클라이언트 소켓 만들기.md  프로토콜 만들기.md
docs/3rd/: Checklist.md  GPIO 제어하기.md  I2C 제어하기.md
docs/learn/: `vector`가 뭔데....md
includes/: main.h
sources/: main.cpp
tests/: test_Animal.cpp  test_BankAccount.cpp  test_Calculator.cpp  test_Student.cpp
